src/test/deca/context/invalid/provided/unray_expr1.deca
/*/ Description:
//    UNray expression
//
// Resultats:
//    Ligne 16: Unary expressin not valide.
// 
// Historique:
//    cree le 01/01/2022*/

{
   



   /* Doit etre refuse.*/
   int a = -true;
}
